--- a/_data/people.yml
+++ b/_data/people.yml
@@ -94,6 +94,8 @@ researchers:
     working: "Tony Shardlow and J. White"
   - name: "Teo Deveney"
     working: "Tony Shardlow"
+  - name: "Claire Delplancke"
+    working: "Matthias Ehrhardt"
   - name: "Margaret Duff"
     working: "Neill Campbell and Matthias Ehrhardt"
   - name: "Joshua Evans"
@@ -144,6 +146,8 @@ researchers:
     working: "Evangelos Evangelou"
   - name: "Andreas Theophilou"
     working: "Özgür Şimşek"
+  - name: "Jarrod Williams"
+    working: "Matthias Ehrhardt"
   - name: "Ed Wong"
     working: "Tom Fincham Haines"
   - name: "Lizhi Zhang"
