--- a/_data/seminars.yml
+++ b/_data/seminars.yml
@@ -1,4 +1,8 @@
 seminars:
+  - title: "Hyperspectral tomography and reconstruction with the CCPi Core Imaging Library"
+    speaker: "Jakob Jorgensen (University of Manchester)"
+    date: 2020-02-14 12:15
+    location: "4W 1.7 Wolfson"
   - title: "Models and Algorithms for Image Editing with Warping"
     speaker: "Ivor Simpson (University of Sussex)"
     date: 2020-01-17 14:15
