--- a/_data/news.yml
+++ b/_data/news.yml
@@ -2,3 +2,6 @@ items:
   - date: "2019-09-01"
     text: "We will be having a launch event on Wednesday 13th November, please find details of the event and our three keynote speakers as well as free signup [here](__/events/launch_event/)."
     critical: true
+  - date: "2020-02-11"
+    text: "We are organising the LMS-Bath Symposium on the Mathematics of Machine Learning in August 2020, see [here](https://mathml2020.github.io/)."
+    critical: true
