--- a/_data/people.yml
+++ b/_data/people.yml
@@ -3,6 +3,10 @@ faculty:
     url: "https://researchportal.bath.ac.uk/en/persons/karim-anaya-izquierdo"
     name:  "Karim Anaya-Izquierdo"
     topics: "Statistical engineering, geometrical MCMC, distribution theory using geometry, statistical epidemiology"
+  - img: "images/luca.png"
+    url: "https://researchportal.bath.ac.uk/en/persons/luca-zanetti"
+    name:  "Luca Zanetti"
+    topics: "algorithms for network analysis, clustering, Markov chains, spectral graph theory"
   - img: "images/bartlett.png"
     url: "https://thestatsgeek.com"
     name:  "Jonathan Bartlett"
@@ -43,10 +47,10 @@ faculty:
     url: "https://researchportal.bath.ac.uk/en/persons/kari-heine"
     name:  "Kari Heine"
     topics: "Sequential Monte Carlo, parallelism, high-dimensional problems, MCMC, population genetics"
-  - img: "images/hook.JPG"
-    url: "http://people.bath.ac.uk/jlh75/"
-    name:  "James Hook"
-    topics: "Numerical linear algebra, applications of artificial intelligence, autonomous investigators, chemical engineering"
+  # - img: "images/hook.JPG"
+  #   url: "http://people.bath.ac.uk/jlh75/"
+  #   name:  "James Hook"
+  #   topics: "Numerical linear algebra, applications of artificial intelligence, autonomous investigators, chemical engineering"
   - img: "images/eike.JPG"
     url: "http://people.bath.ac.uk/em459/"
     name:  "Eike Mueller"
@@ -118,8 +122,8 @@ researchers:
     working: "Evangelos Evangelou"
   - name: "Elizabeth Gray"
     working: "Evangelos Evangelou"
-  - name: "Dan Green"
-    working: "Melina Freitag"
+  # - name: "Dan Green"
+  #   working: "Melina Freitag"
   - name: "Allen Hart"
     working: "James Hook"
   - name: "Adam Hartshorne"
@@ -160,3 +164,5 @@ researchers:
     working: "Tom Fincham Haines"
   - name: "Lizhi Zhang"
     working: "Tiago de Paula Peixoto"
+  - name: "Fangpei Wang"
+    working: "Clarice Poon and Tony Shardlow"
