--- a/_data/people.yml
+++ b/_data/people.yml
@@ -100,12 +100,12 @@ researchers:
     working: "Kari Heine"
   - name: "Eric Baruch Gutiérrez Castillo"
     working: "Matthias Ehrhardt"
-  - name: "Federico Cornalba"
-    working: "Tony Shardlow and J. Zimmer"
+  # - name: "Federico Cornalba"
+  #   working: "Tony Shardlow and J. Zimmer"
   - name: "Jenny Delos Reyes"
     working: "Tony Shardlow and J. White"
   - name: "Teo Deveney"
-    working: "Tony Shardlow"
+    working: "Tony Shardlow and Eike Mueller"
   - name: "Claire Delplancke"
     working: "Matthias Ehrhardt"
   - name: "Margaret Duff"
@@ -115,7 +115,7 @@ researchers:
   - name: "David Fernandes"
     working: "Neill Campbell"
   - name: "Michele Firmo"
-    working: "Tony Shardlow"
+    working: "Tony Shardlow and Silvia Gazzola"
   - name: "Connr Gascoigne"
     working: "Theresa Smith"
   - name: "Arron Gosnell"
