Beate/Mo update

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -102,6 +102,8 @@ researchers:
     working: "Matthias Ehrhardt"
   # - name: "Federico Cornalba"
   #   working: "Tony Shardlow and J. Zimmer"
+  - name: "Ketan Fatania"
+    working: "Mohammad Golbabaee"
   - name: "Jenny Delos Reyes"
     working: "Tony Shardlow and J. White"
   - name: "Teo Deveney"
