--- a/_data/people.yml
+++ b/_data/people.yml
@@ -166,5 +166,5 @@ researchers:
     working: "Tom Fincham Haines"
   - name: "Lizhi Zhang"
     working: "Tiago de Paula Peixoto"
-  - name: "Fangpei Wang"
+  - name: "Fengpei Wang"
     working: "Clarice Poon and Tony Shardlow"
