typo in Andrea's name

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -7,7 +7,7 @@ faculty:
     url: "https://researchportal.bath.ac.uk/en/persons/luca-zanetti"
     name:  "Luca Zanetti"
     topics: "algorithms for network analysis, clustering, Markov chains, spectral graph theory"
-  - img: "images/Pizzoferato.jpg"
+  - img: "images/Pizzoferrato.jpg"
     url: "https://researchportal.bath.ac.uk/en/persons/andrea-pizzoferrato"
     name:  "Andrea Pizzoferrato"
     topics: "statistical mechanics, mathematical theory of blockchains, graph signal processing"
