--- a/_data/people.yml
+++ b/_data/people.yml
@@ -11,6 +11,10 @@ faculty:
     url: "https://researchportal.bath.ac.uk/en/persons/andrea-pizzoferrato"
     name:  "Andrea Pizzoferrato"
     topics: "statistical mechanics, mathematical theory of blockchains, graph signal processing"
+  - img: "images/chris_budd.jpg"
+    url: "https://people.bath.ac.uk/mascjb/"
+    name:  "Chris Budd"
+    topics: "industrial mathematics, dynamical systems, public engagement, numerical analysis, deep learning"
   - img: "images/bartlett.png"
     url: "https://thestatsgeek.com"
     name:  "Jonathan Bartlett"
