--- a/_data/people.yml
+++ b/_data/people.yml
@@ -15,6 +15,10 @@ faculty:
     url: "https://people.bath.ac.uk/mascjb/"
     name:  "Chris Budd"
     topics: "industrial mathematics, dynamical systems, public engagement, numerical analysis, deep learning"
+  - img: "images/dawes.jpg"
+    url: "https://people.bath.ac.uk/jhpd20/"
+    name:  "Jon Dawes"
+    topics: "dynamical systems, reservoir computing"
   - img: "images/bartlett.png"
     url: "https://thestatsgeek.com"
     name:  "Jonathan Bartlett"
@@ -135,7 +139,7 @@ researchers:
   # - name: "Dan Green"
   #   working: "Melina Freitag"
   - name: "Allen Hart"
-    working: "James Hook"
+    working: "Jon Dawes and Olga Isupova"
   - name: "Adam Hartshorne"
     working: "Neill Campbell"
   - name: "Matthew Hosier"
