--- a/_data/people.yml
+++ b/_data/people.yml
@@ -15,7 +15,7 @@ faculty:
     url: "https://people.bath.ac.uk/mascjb/"
     name:  "Chris Budd"
     topics: "industrial mathematics, dynamical systems, public engagement, numerical analysis, deep learning"
-  - img: "images/dawes.jpg"
+  - img: "images/dawes.jpeg"
     url: "https://people.bath.ac.uk/jhpd20/"
     name:  "Jon Dawes"
     topics: "dynamical systems, reservoir computing"
