--- a/_data/people.yml
+++ b/_data/people.yml
@@ -39,6 +39,10 @@ faculty:
     url: "https://researchportal.bath.ac.uk/en/persons/beate-ehrhardt"
     name:  "Beate Ehrhardt"
     topics: "Hypothesis testing, Bayesian statistics, machine learning, networks, optimal experimental design, causality"
+  - img: "images/adwaye.jpg"
+    url: "https://researchportal.bath.ac.uk/en/persons/adwaye-rambojun"
+    name:  "Adwaye Rambojun"
+    topics: "Medical imaging, Bayesian statistics, machine learning"
   - img: "images/vangelis.jpg"
     url: "http://people.bath.ac.uk/ee224/"
     name:  "Evangelos Evangelou"
@@ -162,8 +166,7 @@ researchers:
     working: "Tiago de Paula Peixoto"
   - name: "Tom Pennington"
     working: "R. Scheichl and K. Anaya-Izquierdo"
-  - name: "Adwaye Rambojun"
-    working: "Neill Campbell and Tony Shardlow"
+
   - name: "Paul Russell"
     working: "Özgür Şimşek"
   - name: "Paul Secular"
