--- a/_data/people.yml
+++ b/_data/people.yml
@@ -1,4 +1,8 @@
 faculty:
+  - img: "images/alexcox.jpeg"
+    url: "https://people.bath.ac.uk/mapamgc"
+    name:  "Alexander Cox"
+    topics: "Stochastic control, Monte Carlo methods, optimal transport"
   - img: "images/karim.jpg"
     url: "https://researchportal.bath.ac.uk/en/persons/karim-anaya-izquierdo"
     name:  "Karim Anaya-Izquierdo"
