--- a/_data/people.yml
+++ b/_data/people.yml
@@ -141,7 +141,7 @@ researchers:
   - name: "Connr Gascoigne"
     working: "Theresa Smith"
   - name: "Arron Gosnell"
-    working: "Evangelos Evangelou"
+    working: "Evangelos Evangelou and Jonathan Bartlett"
   - name: "Allen Hart"
     working: "Jon Dawes and Olga Isupova"
   - name: "Adam Hartshorne"
@@ -164,13 +164,12 @@ researchers:
     working: "Tiago de Paula Peixoto"
   - name: "Tom Pennington"
     working: "R. Scheichl and K. Anaya-Izquierdo"
-
+  - name: "Seb Scott"
+    working: Matthias Ehrhardt and Silvia Gazzola
   - name: "Paul Russell"
     working: "Özgür Şimşek"
   - name: "Paul Secular"
     working: "Sergey Dolgov"
-  - name: "Sebastian Stolze"
-    working: "Evangelos Evangelou"
   - name: "Andreas Theophilou"
     working: "Özgür Şimşek"
   - name: "Jarrod Williams"
@@ -181,3 +180,9 @@ researchers:
     working: "Tiago de Paula Peixoto"
   - name: "Fengpei Wang"
     working: "Clarice Poon and Tony Shardlow"
+  - name: "Daniel Miles"
+    working: "Sandipan Roy and Evangelos Evangelou"
+  - name: "Luca Saluzzi"
+    working: "Sergey Dolgov"
+  - name: "Oliver Townsend"
+    working: "Silvia Gazzola and Sergey Dolgov"
