--- a/_data/news.yml
+++ b/_data/news.yml
@@ -19,6 +19,6 @@ items:
 '
     critical: true
   - date: "2021-06-02"
-    text: '**[IR Tools](https://github.com/silviagazzola/IRtools) Training Event for PhD students** 
+    text: '**[IR Tools](https://github.com/silviagazzola/IRtools)** Training Event for PhD students 
 '
     critical: true
