--- a/_data/people.yml
+++ b/_data/people.yml
@@ -134,6 +134,14 @@ researchers:
     working: "Neill Campbell and Matthias Ehrhardt"
   - name: "Joshua Evans"
     working: "Özgür Şimşek"
+  - name: "Christoph Bumiller"
+    working: "Özgür Şimşek"
+  - name: "Matt Hewitt"
+    working: "Özgür Şimşek"
+  - name: "Jessica Nicholson"
+    working: "Özgür Şimşek"
+  - name: "Akshil Patel"
+    working: "Özgür Şimşek"    
   - name: "David Fernandes"
     working: "Neill Campbell"
   - name: "Michele Firmo"
