--- a/_data/people.yml
+++ b/_data/people.yml
@@ -23,6 +23,10 @@ faculty:
     url: "https://people.bath.ac.uk/jhpd20/"
     name:  "Jon Dawes"
     topics: "dynamical systems, reservoir computing"
+  - img: "images/lisa.jpeg"
+    url: "https://people.bath.ac.uk/lmk54/"
+    name:  "Lisa Kruesser"
+    topics: "dynamical systems, differential equations, numerical analysis, deep learning"
   - img: "images/bartlett.png"
     url: "https://thestatsgeek.com"
     name:  "Jonathan Bartlett"
